// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FreeTextResponse > renders default as expected 1`] = `
<div>
  <div
    class="container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div
          class="flex-1 flex flex-col gap-2"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <p
              class="bluedot-h4 not-prose"
            >
              Understanding LLMs
            </p>
          </div>
          <div
            class="markdown-extended-renderer prose prose-p:text-[16px] prose-li:text-[16px] prose-p:leading-[160%] prose-li:leading-[160%] prose-p:tracking-[-0.002em] prose-li:tracking-[-0.002em] prose-p:font-normal prose-li:font-normal prose-p:font-sans prose-li:font-sans prose-strong:font-sans prose-strong:font-semibold prose-strong:text-[16px] prose-strong:leading-[160%] prose-strong:tracking-[-0.002em] prose-a:font-normal prose-a:underline max-w-none"
          >
            <p>
              Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col relative"
    >
      <div
        class="relative w-full z-[1]"
      >
        <textarea
          aria-label="Text input area"
          class="box-border w-full bg-white rounded-[10px] px-6 py-5 z-[1] font-normal text-[14px] leading-[160%] tracking-[-0.002em] text-[#13132E] resize-y outline-none transition-all duration-200 block border-[0.5px] border-[rgba(19,19,46,0.25)] focus:border-[1.25px] focus:border-[#1641D9] focus:shadow-[0px_0px_10px_rgba(34,68,187,0.3)] disabled:cursor-not-allowed disabled:opacity-60 [&::-webkit-resizer]:hidden min-h-[140px]"
          disabled=""
          placeholder="Create an account to save your answers"
        />
        <div
          class="auto-save-textarea-drag-notches absolute w-[15px] h-[14px] right-2 bottom-2 pointer-events-none z-[2]"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_auto_save)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_auto_save"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full flex"
    >
      <a
        class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark !w-auto !whitespace-normal text-center min-w-0"
        href="/login?register=true&redirect_to=%2Ftest-path"
        tabindex="0"
      >
        Create a free account to save your answers
        <span
          class="cta-button__chevron ml-3"
        >
          <svg
            class="cta-button__chevron-icon size-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`FreeTextResponse > renders logged in as expected 1`] = `
<div>
  <div
    class="container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div
          class="flex-1 flex flex-col gap-2"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <p
              class="bluedot-h4 not-prose"
            >
              Understanding LLMs
            </p>
            <button
              aria-label="Download as TXT"
              class="p-1 -mt-1 -mr-1 rounded-md text-gray-500 transition-colors hover:bg-gray-100 hover:text-gray-700 focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal flex-shrink-0"
              type="button"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2.5V12.5M10 12.5L6.25 8.75M10 12.5L13.75 8.75M3.75 16.25H16.25"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </button>
          </div>
          <div
            class="markdown-extended-renderer prose prose-p:text-[16px] prose-li:text-[16px] prose-p:leading-[160%] prose-li:leading-[160%] prose-p:tracking-[-0.002em] prose-li:tracking-[-0.002em] prose-p:font-normal prose-li:font-normal prose-p:font-sans prose-li:font-sans prose-strong:font-sans prose-strong:font-semibold prose-strong:text-[16px] prose-strong:leading-[160%] prose-strong:tracking-[-0.002em] prose-a:font-normal prose-a:underline max-w-none"
          >
            <p>
              Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col relative"
    >
      <div
        class="relative w-full z-[1]"
      >
        <textarea
          aria-describedby="save-status-message"
          aria-label="Text input area"
          class="box-border w-full bg-white rounded-[10px] px-6 py-5 z-[1] font-normal text-[14px] leading-[160%] tracking-[-0.002em] text-[#13132E] resize-y outline-none transition-all duration-200 block border-[0.5px] border-[rgba(19,19,46,0.25)] focus:border-[1.25px] focus:border-[#1641D9] focus:shadow-[0px_0px_10px_rgba(34,68,187,0.3)] disabled:cursor-not-allowed disabled:opacity-60 [&::-webkit-resizer]:hidden min-h-[140px]"
          placeholder="Enter your answer here"
        />
        <div
          class="auto-save-textarea-drag-notches absolute w-[15px] h-[14px] right-2 bottom-2 pointer-events-none z-[2]"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_auto_save)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_auto_save"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FreeTextResponse > renders with saved exercise response 1`] = `
<div>
  <div
    class="container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div
          class="flex-1 flex flex-col gap-2"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <p
              class="bluedot-h4 not-prose"
            >
              Understanding LLMs
            </p>
            <button
              aria-label="Download as TXT"
              class="p-1 -mt-1 -mr-1 rounded-md text-gray-500 transition-colors hover:bg-gray-100 hover:text-gray-700 focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal flex-shrink-0"
              type="button"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2.5V12.5M10 12.5L6.25 8.75M10 12.5L13.75 8.75M3.75 16.25H16.25"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </button>
          </div>
          <div
            class="markdown-extended-renderer prose prose-p:text-[16px] prose-li:text-[16px] prose-p:leading-[160%] prose-li:leading-[160%] prose-p:tracking-[-0.002em] prose-li:tracking-[-0.002em] prose-p:font-normal prose-li:font-normal prose-p:font-sans prose-li:font-sans prose-strong:font-sans prose-strong:font-semibold prose-strong:text-[16px] prose-strong:leading-[160%] prose-strong:tracking-[-0.002em] prose-a:font-normal prose-a:underline max-w-none"
          >
            <p>
              Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col relative"
    >
      <div
        class="relative w-full z-[1]"
      >
        <textarea
          aria-describedby="save-status-message"
          aria-label="Text input area"
          class="box-border w-full bg-white rounded-[10px] px-6 py-5 z-[1] font-normal text-[14px] leading-[160%] tracking-[-0.002em] text-[#13132E] resize-y outline-none transition-all duration-200 block border-[0.5px] border-[rgba(19,19,46,0.25)] focus:border-[1.25px] focus:border-[#1641D9] focus:shadow-[0px_0px_10px_rgba(34,68,187,0.3)] disabled:cursor-not-allowed disabled:opacity-60 [&::-webkit-resizer]:hidden min-h-[140px]"
          placeholder="Enter your answer here"
        >
          This is my saved answer.
        </textarea>
        <div
          class="auto-save-textarea-drag-notches absolute w-[15px] h-[14px] right-2 bottom-2 pointer-events-none z-[2]"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_auto_save)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_auto_save"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
